Change Pin drawing